# mysite

./: .env  .env_ex  docker-compose.yml  pyproject.toml
mysite/: from_mongo_to_postgres.py
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_post_author_post_updated_at.py
mysite/blog/templates/blog/: author_posts.html  login.html  logout.html  post_detail.html  post_form.html  post_list.html  post_list.html~  register.html  tags_posts.html  test.html
mysite/blog/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
mysite/mysite/: settings.py
